Fix the memory leak after Edit->Find in the project tab

BUG: 460634